<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:layout_marginBottom="@dimen/margin_medium"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_student_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_textview"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/default_student_roll"
        android:fontFamily="@font/roboto"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold" />

    <TextView
        android:layout_alignBaseline="@id/tv_student_roll"
        android:id="@+id/tv_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/default_student_name"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_heading_1x" />

    <LinearLayout
        android:id="@+id/ll_item_student_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignStart="@id/tv_student_name"
        android:layout_below="@id/tv_student_name">

        <TextView
            android:id="@+id/tv_attendance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendance"
            android:textSize="@dimen/text_small"
            android:fontFamily="@font/roboto"
            android:layout_marginRight="@dimen/margin_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="@dimen/text_regular"
            android:layout_marginRight="@dimen/margin_medium"/>

        <TextView
            android:id="@+id/tv_attendance_roll_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_records"
            android:fontFamily="@font/roboto"
            android:textStyle="bold|italic"/>

    </LinearLayout>

</RelativeLayout>