<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="none"
    tools:context=".activities.StudentDetailActivity">

    <ImageView
        android:id="@+id/ic_back_student_detail"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:src="@drawable/ic_left"
        android:tint="@color/colorAccent"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:id="@+id/ll_initial_student_name"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:focusable="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_circle">

        <TextView
            android:id="@+id/tv_initial_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/default_initial_name"
            android:fontFamily="@font/roboto"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_heading_2x" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_student_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_initial_student_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:text="@string/default_student_name"
        android:fontFamily="@font/open_sans"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_student_detail_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_student_detail_name"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_textview"
        android:text="@string/default_student_roll"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="@dimen/margin_medium"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2x"
        android:visibility="visible" />

    <TextView
        android:id="@+id/divider_1_student_detail"
        android:layout_below="@id/tv_student_detail_roll"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_medium_3"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/ll_month_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_below="@id/divider_1_student_detail">

        <ImageButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_left" />

        <TextView
            android:id="@+id/tv_month_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/default_month"
            android:fontFamily="@font/roboto"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular_3x"/>

        <ImageButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:clickable="false"
            android:focusable="true"
            android:tint="@color/disabled_text"
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_right" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ll_month_title"
        android:id="@+id/ll_student_detail_attendance"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/attendance"
            android:textSize="@dimen/text_regular"
            android:fontFamily="@font/roboto"
            android:textColor="@color/secondary_text"
            android:textAlignment="viewEnd"/>

        <TextView
            android:textAlignment="gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text=" . "
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="@dimen/text_heading_1x"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_student_detail_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/no_records"
            android:fontFamily="@font/roboto"
            android:textStyle="bold|italic"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@color/secondary_text"
            android:textAlignment="viewStart"/>
    </LinearLayout>

    <TextView
        android:id="@+id/divider_2_student_detail"
        android:layout_below="@id/ll_student_detail_attendance"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_student_detail_roll_call_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/divider_2_student_detail"
        android:clipToPadding="false" />

    <TextView
        android:layout_below="@id/divider_2_student_detail"
        android:id="@+id/tv_no_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:visibility="gone"
        android:text="@string/no_records"
        android:textColor="@color/disabled_text"
        android:textSize="@dimen/text_regular_2x" />

</RelativeLayout>